--- a/learn/vue/ssydx/package.json
+++ b/learn/vue/ssydx/package.json
@@ -13,6 +13,7 @@
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^5.2.1",
+    "sass": "^1.83.1",
     "vite": "^6.0.5",
     "vite-plugin-vue-devtools": "^7.6.8"
   }
