--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,7 +2,8 @@
     "livePreview.defaultPreviewPath": "/learn/bootstrap/other/idx.html",
     "svg.preview.background": "transparent",
     "java.project.sourcePaths": [
-        "learn\\java"
+        "learn/java",
+        "learn/demo/src/main/java/com/ssydx/demo"
     ],
     "java.project.referencedLibraries": [
         "d:\\Download\\Edge\\mysql-connector-j-9.2.0\\mysql-connector-j-9.2.0.jar"
