--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,11 +2,14 @@
     "livePreview.defaultPreviewPath": "/learn/bootstrap/other/idx.html",
     "svg.preview.background": "transparent",
     "java.project.sourcePaths": [
+        "learn/springboot/test/src/main/java/com/ssydx1/demo",
+        "learn/springboot/ssydx1/src/main/java/com/ssydx1/demo",
         "learn/java",
-        "learn/demo/src/main/java/com/ssydx/demo"
+        "learn/springboot/ssydx1/src/main/java/com/ssydx1/ssydx1"
     ],
     "java.project.referencedLibraries": [
         "d:\\Download\\Edge\\mysql-connector-j-9.2.0\\mysql-connector-j-9.2.0.jar"
     ],
-    "java.debug.settings.onBuildFailureProceed": true
+    "java.debug.settings.onBuildFailureProceed": true,
+    "java.configuration.updateBuildConfiguration": "automatic"
 }
