--- a/learn/springboot/test3/src/main/webapp/Web-INF/web.xml
+++ b/learn/springboot/test3/src/main/webapp/Web-INF/web.xml
@@ -1,11 +1,13 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <web-app xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://java.sun.com/xml/ns/javaee" xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_3_0.xsd" id="WebApp_ID" version="3.0">
     <display-name>SpringMVC</display-name>
+    <!-- 设置servlet -->
     <servlet>  
         <servlet-name>spring</servlet-name>  
         <servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>  
         <load-on-startup>1</load-on-startup>    
     </servlet>  
+    <!-- 映射 -->
     <servlet-mapping>  
         <servlet-name>spring</servlet-name>  
         <url-pattern>/</url-pattern>  
