--- a/learn/springboot/data/pom.xml
+++ b/learn/springboot/data/pom.xml
@@ -50,6 +50,10 @@
 			<artifactId>spring-boot-starter-data-jdbc</artifactId>
 		</dependency>
 		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-data-jpa</artifactId>
+		</dependency>
+		<dependency>
 			<groupId>mysql</groupId>
 			<artifactId>mysql-connector-java</artifactId>
 			<version>8.0.33</version>
@@ -74,5 +78,4 @@
 			</plugin>
 		</plugins>
 	</build>
-
 </project>
