--- a/learn/springboot/data/src/main/resources/application.yml
+++ b/learn/springboot/data/src/main/resources/application.yml
@@ -5,6 +5,10 @@ spring:
     username: sa
     password: 
     initialization-mode: always
+  jpa:
+    show-sql: true
+    hibernate:
+      ddl-auto: update
 
 server:
   port: 8099
@@ -13,3 +17,8 @@ mydatasource:
   url: jdbc:mysql://localhost:3306/javadb
   username: ssydx
   password: 
+# logging:
+#   level: 
+#     org: 
+#       hibernate:
+#         SQL: DEBUG
