--- a/learn/springboot/app/pom.xml
+++ b/learn/springboot/app/pom.xml
@@ -77,6 +77,11 @@
 			<groupId>org.projectlombok</groupId>
 			<artifactId>lombok</artifactId>
 		</dependency>
+		<dependency>
+    <groupId>net.objecthunter</groupId>
+    <artifactId>exp4j</artifactId>
+    <version>0.4.8</version>
+</dependency>
 	</dependencies>
 
 	<build>
