--- a/learn/springboot/app/pom.xml
+++ b/learn/springboot/app/pom.xml
@@ -78,10 +78,14 @@
 			<artifactId>lombok</artifactId>
 		</dependency>
 		<dependency>
-    <groupId>net.objecthunter</groupId>
-    <artifactId>exp4j</artifactId>
-    <version>0.4.8</version>
-</dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-amqp</artifactId>
+		</dependency>
+		<dependency>
+		<groupId>net.objecthunter</groupId>
+			<artifactId>exp4j</artifactId>
+			<version>0.4.8</version>
+		</dependency>
 	</dependencies>
 
 	<build>
