--- a/learn/springboot/app/src/main/resources/application.yml
+++ b/learn/springboot/app/src/main/resources/application.yml
@@ -13,9 +13,9 @@ spring:
   rabbitmq:
     host: localhost
     port: 5672
-    username: root
-    password: 123456
-    virtual-host: /
+    username: miaosha
+    password: miaosha
+    virtual-host: miaosha
     listener:
       simple:
         concurrency: 10
